--- a/feat_analysis_spotify.ipynb
+++ b/feat_analysis_spotify.ipynb
@@ -68,8 +68,8 @@
    "outputs": [],
    "source": [
     "#configurando o acesso a API usando as credenciais do usuário\n",
-    "cid =\"8e7146f07ba74f24abf16c20fbfc7c29\" \n",
-    "secret = \"b4664e49ef024720947ed3d616c43537\" "
+    "cid =\"YOUR CREDENTIALS\" \n",
+    "secret = \"YOUR CREDENTIALS\" "
    ]
   },
   {
